sensorsender/manifests/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensorsender
  labels:
    app: sensorsender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensorsender
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: sensorsender
    spec:
      containers:
        - name: sensorsender
          image: bisry/earlyvet-sensorsender
          ports:
            - containerPort: 5005
